--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600">
     <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="/assets/css/materialize.min.css">
-    <link rel="stylesheet" href="/assets/css/tooplate.css">
+    <link rel="stylesheet" href="./assets/css/tooplate.css">
 </head>
 
 <body id="home">
